--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -1,11 +1,16 @@
 @misc{Photoresistor1,
-  title = {Arduino},
+  title = {Photoresistor},
   howpublished = "\url{https://en.wikipedia.org/wiki/Photoresistor}"
 }
 
 @misc{Photoresistor2,
-  title = {Arduino},
+  title = {Photoresistor},
   howpublished = "\url{https://www.electronics-notes.com/articles/electronic_components/resistors/light-dependent-resistor-ldr.php}"
+}
+
+@misc{Photoresistor3,
+  title = {Photoresistor},
+  howpublished = "\url{http://www.resistorguide.com/photoresistor}"
 }
 
 @misc{Arduino,
@@ -36,16 +41,4 @@
 @misc{Video,
   title = {Useful video},
   howpublished = "\url{https://www.youtube.com/watch?v=B86nqDRskVU}"
-}
-
-
-
-
-
-
-@article{SystemC,
-  title={SystemC},
-  author={{Accellera Systems Initiative} and others},
-  journal={Online, December},
-  year={2013}
 }
