--- a/report/solar_tracker.tex
+++ b/report/solar_tracker.tex
@@ -157,6 +157,7 @@ Un motore passo-passo è idealmente guidato da corrente sinusoidale. Sono state 
 \end{figure}
 Arduino\cite{Arduino} è una piattaforma elettronica open source basata su hardware e software di facile utilizzo. Le schede Arduino permettono di leggere input da sensori, elaboratore i dati nel microcontrollore programmabile e restituire output mediante attuatori
 
+\clearpage
 \begin{figure}[!htb]
     \centering
     \includegraphics[width=0.90\linewidth]{figures/arduinoUNO.png}
