--- a/report/solar_tracker.tex
+++ b/report/solar_tracker.tex
@@ -218,7 +218,7 @@ Durante la ricerca del punto di equilibrio il dispositivo ad ogni ciclo deve leg
 \\Un secondo approccio che supera queste limitazioni vede epsilon come numero variabile, che partendo da 0 cresce ogni volta che c'è una inversione di rotazione.
 
 
-\subsection{Utilizzo del motore}
+\subsection{Utilizzo del motore}\cite{Video}
 Il motore utilizzato è un motore passo-passo unipolare a 4 fasi che è collegato ad una driver board che permette di controllarlo facilmente alimentando i quattro input della board.
 \\La tecnica utilizzata per l'avanzamento è la full-step, in quanto la più consigliata.
 
